overflow fix

--- a/src/app/home/home.component.scss
+++ b/src/app/home/home.component.scss
@@ -24,8 +24,17 @@
   top: 0;
   overflow: hidden;
   flex-shrink: 0;
+
+  @media (prefers-color-scheme: dark) {
+    background-color: #323232;
+  }
+
+  @media (prefers-color-scheme: light) {
+    background-color: white;
+  }
+
   @media (orientation: portrait) {
-    padding: 20px 20px 0 20px;
+    padding: 20px;
   }
 
   @media (orientation: landscape) {
@@ -75,9 +84,16 @@
   width: 100%;
 
   > div {
-    padding: 20px;
     display: grid;
     gap: 20px;
+
+    @media (orientation: landscape) {
+      padding: 20px;
+    }
+
+    @media (orientation: portrait) {
+      padding: 0 20px 20px 20px;
+    }
 
     h2 {
       font-size: 32px;
